# CppLox

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
src/: Lox.cpp  builtins.cpp  builtins.hpp  cpplox.cpp  environment.cpp  environment.h  environment.hpp  expression.cpp  expression.h  globals.cpp  globals.hpp  interpreter.cpp  interpreter.h  interpreter.hpp  lox.cpp  parser.cpp  parser.h  parser.hpp  resolver.hpp  scanner.cpp  scanner.h  scanner.hpp  statement.h  token.cpp  token.h  token_types.h
src/Builtins/: Builtins.hpp  Clock.hpp  Names.hpp
src/Builtins/Constants/: Math.hpp
src/Builtins/Functions/Clock/: Clock.cpp  Clock.hpp
src/ByteCode/: Common.hpp  Lox.cpp
src/ByteCode/Chunk/: Chunk.cpp  Chunk.hpp
src/ByteCode/Compiler/: Compiler.cpp  Compiler.hpp
src/ByteCode/Debug/: Debug.cpp  Debug.hpp
src/ByteCode/OpCode/: OpCode.hpp
src/ByteCode/Types/: Byte.hpp  HeapObject.hpp
src/ByteCode/VM/: VM.cpp  VM.hpp
src/ByteCode/VM/Error/: Error.cpp  Error.hpp
src/ByteCode/Value/: Value.hpp
src/Common/Error/Interface/: Interface.hpp
src/Common/Error/Report/: Report.cpp  Report.hpp
src/Common/Parser/: Parser.cpp  Parser.hpp
src/Common/Parser/Cursor/: Cursor.cpp  Cursor.hpp
src/Common/Parser/Error/: Error.cpp  Error.hpp
src/Common/Parser/Expressions/: Expressions.cpp  Expressions.hpp
src/Common/Parser/Statements/: Statements.cpp  Statements.hpp
src/Common/Parser/Utils/: Utils.hpp
src/Common/Reader/: Reader.cpp  Reader.hpp
src/Common/Reader/Error/: Error.cpp  Error.hpp
src/Common/Resolver/: Resolver.cpp  Resolver.hpp
src/Common/Resolver/Error/: Error.cpp  Error.hpp
src/Common/Scanner/: Scanner.cpp  Scanner.hpp
src/Common/Scanner/Cursor/: Cursor.cpp  Cursor.hpp
src/Common/Scanner/Error/: Error.cpp  Error.hpp
src/Common/Scanner/Tokens/: Tokens.cpp  Tokens.hpp
src/Common/Types/Objects/: Object.hpp
src/Common/Types/Syntax/: Expression.hpp  Statement.hpp
src/Common/Types/Tokens/: Token.cpp  Token.hpp  TokenTypes.hpp
src/Common/Types/Value/: Value.hpp
src/Common/Utils/Operands/: Operands.hpp
src/Common/Utils/Put/: Put.hpp
src/Common/Utils/Truth/: Truth.hpp
src/Interpreter/: Interpreter.cpp  Interpreter.hpp
src/Interpreter/Error/: Error.cpp  Error.hpp
src/Interpreter/Expressions/: Evaluate.cpp  Evaluate.hpp
src/Interpreter/Expressions/Call/: Call.cpp  Call.hpp
src/Interpreter/Expressions/Class/: Class.cpp  Class.hpp
src/Interpreter/Expressions/Equality/: Equality.cpp  Equality.hpp
src/Interpreter/Statements/: Execute.cpp  Execute.hpp
src/Interpreter/Statements/Put/: Put.hpp
src/Interpreter/Utils/Operands/: Operands.hpp
src/Parser/: Parser.cpp  Parser.hpp
src/Parser/Cursor/: Cursor.cpp  Cursor.hpp
src/Parser/Error/: Error.cpp  Error.hpp
src/Parser/Expressions/: Expressions.cpp  Expressions.hpp
src/Parser/Statements/: Statements.cpp
src/Parser/Utils/: Utils.hpp
src/Reader/: Reader.cpp  Reader.hpp
src/Reader/Error/: Error.hpp
src/Resolver/: Resolver.cpp  Resolver.hpp
src/Resolver/Error/: Error.cpp  Error.hpp
src/Scanner/: Scanner.cpp  Scanner.hpp
src/Scanner/Error/: Error.cpp  Error.hpp
src/Scanner/Tokens/: Tokens.cpp  Tokens.hpp
src/TreeWalk/: Lox.cpp
src/TreeWalk/Builtins/: Builtins.hpp
src/TreeWalk/Builtins/Constants/: Math.hpp
src/TreeWalk/Interpreter/: Interpreter.cpp  Interpreter.hpp
src/TreeWalk/Interpreter/Error/: Error.cpp  Error.hpp
src/TreeWalk/Interpreter/Expressions/: Evaluate.cpp  Evaluate.hpp
src/TreeWalk/Interpreter/Statements/: Execute.cpp  Execute.hpp
src/TreeWalk/Parser/: Parser.cpp  Parser.hpp
src/TreeWalk/Parser/Cursor/: Cursor.cpp  Cursor.hpp
src/TreeWalk/Parser/Error/: Error.cpp  Error.hpp
src/TreeWalk/Parser/Expressions/: Expressions.cpp  Expressions.hpp
src/TreeWalk/Parser/Statements/: Statements.cpp  Statements.hpp
src/TreeWalk/Resolver/: Resolver.cpp  Resolver.hpp
src/Types/Environment/: Environment.cpp  Environment.hpp
src/Types/Object/: Class.hpp  Function.hpp  Object.hpp
src/Types/Objects/: Object.hpp
src/Types/Syntax/: Expression.hpp  Statement.hpp
src/Types/Token/: Token.cpp  Token.hpp
src/Types/Tokens/: Token.cpp  Token.hpp
src/Utils/: Arc.hpp  Box.hpp  Reader.hpp
src/builtins/: builtins.hpp  clock.hpp  function_interface.hpp  names.hpp
src/interpreter/: environment.hpp  error.cpp  error.hpp  interpreter.cpp  interpreter.hpp
src/interpreter/Environment/: Environment.hpp
src/interpreter/Error/: Error.cpp  Error.hpp
src/interpreter/Expressions/: Evaluate.cpp  ExpressionEvaluator.hpp
src/interpreter/Statements/: Execute.cpp  StatementExecutor.hpp
src/lexer/: cursor.cpp  cursor.hpp  error.cpp  error.hpp  lexer.cpp  lexer.hpp  tokens.cpp  tokens.hpp
src/object_types/: class.hpp  function.hpp  object.hpp
src/objects/: class.hpp  function.hpp
src/parser/: cursor.cpp  cursor.hpp  error.cpp  error.hpp  expressions.cpp  expressions.hpp  parser.cpp  parser.hpp  statements.cpp  statements.hpp  utils.hpp
src/parser/Cursor/: Cursor.cpp  Cursor.hpp
src/parser/Error/: Error.cpp  Error.hpp
src/parser/Expressions/: Expressions.cpp  Expressions.hpp
src/parser/Statements/: Statements.cpp  Statements.hpp
src/parser/Utils/: Utils.hpp
src/resolver/: error.cpp  error.hpp  resolver.cpp  resolver.hpp
src/resolver/Error/: Error.cpp  Error.hpp
src/scanner/: cursor.cpp  cursor.hpp  error.cpp  error.hpp  scanner.cpp  scanner.hpp  tokens.cpp  tokens.hpp
src/scanner/Error/: Error.hpp
src/scanner/Tokens/: Tokens.cpp
src/syntax/: expression.hpp  statement.hpp  token.hpp
src/syntax_types/: expression.hpp  statement.hpp
src/token/: token.cpp
src/types/: class.hpp  environment.hpp  expression.h  expression.hpp  function.hpp  object.h  object.hpp  statement.h  statement.hpp  token.hpp
src/utils/: arc.hpp  arcdyn.hpp  box.h  box.hpp  error.h  error.hpp  error_interface.hpp  printer.h  printer.hpp  reader.h  reader.hpp
tests/: builtins.lox  cpplox_tests.cpp  function.lox  test.lox  tests.cpp
unit_tests/: tests.cpp
(+35 files in other folders)
